--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
   <h1>Thomas Wallace</h1>
+  <nav>
+    <ul>
+        <li><a href="#">First Assignment</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
