--- a/prototype/index.html
+++ b/prototype/index.html
@@ -16,6 +16,7 @@
     <header class="primary">
       <h1>Prototype HTML Document Example</h1>
     </header>
+    <img src="assets/img/gordo.jpeg" alt="" />
     <section id="content">
       <h2 id="test">Properly Marking up an HTML Document</h2>
       <p>This is a paragraph. Often times designers will use <q>Dummy Text</q> as a placeholder in a document. <em>An example of that text follows</em>...Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <strong>Praesent volutpat velit sed massa.</strong> In volutpat eros sagittis ipsum. <del>Donec fringilla risus</del> nec nunc. Fusce tellus arcu, blandit quis, posuere in, porta vitae, lorem. Quisque feugiat arcu eget <sup><a href="#ref-1">1</a></sup></p>
