--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="prototype/index.html">First Assignment</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
+        <li><a href="assets/img/flexbox-froggy.jpg">Flexbox Froggy</a></li>
     </ul>
   </nav>
   <h3>Thoughts on Web Accessibility</h3>
