--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           </ul>
         </li>
         <li><a href="assets/img/flexbox-froggy.jpg">Flexbox Froggy</a></li>
+        <li><a href="assets/img/bear.jpg">Bear</a></li>
     </ul>
   </nav>
   <h3>Thoughts on Web Accessibility</h3>
