--- a/css-demo/contact.html
+++ b/css-demo/contact.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <section id="intro" class="container">
-      <h2>Home</h2>
+      <h2>Contact</h2>
       <p>
         Integer pretium fringilla mauris, sed cursus purus consectetur eu. Donec
         vitae placerat enim. Nam dictum purus nec diam pharetra, in accumsan
