--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </li>
         <li><a href="assets/img/flexbox-froggy.jpg">Flexbox Froggy</a></li>
         <li><a href="assets/img/bear.jpg">Bear</a></li>
+        <li><a href="spacex-v1/">Final Project Draft</a></li>
     </ul>
   </nav>
   <h3>Thoughts on Web Accessibility</h3>
