--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="assets/img/flexbox-froggy.jpg">Flexbox Froggy</a></li>
         <li><a href="assets/img/bear.jpg">Bear</a></li>
         <li><a href="spacex-v1/">Final Project Draft</a></li>
+        <li><a href="spacex-final/">Final Project</a></li>
     </ul>
   </nav>
   <h3>Thoughts on Web Accessibility</h3>
